Add top/bottom margins for MonthView.

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,13 +1,16 @@
 <resources>
-	<!-- Default screen margins, per the Android Design guidelines. -->
-	<dimen name="activity_horizontal_margin">16dp</dimen>
-	<dimen name="activity_vertical_margin">16dp</dimen>
+  <!-- Default screen margins, per the Android Design guidelines. -->
+  <dimen name="activity_horizontal_margin">16dp</dimen>
+  <dimen name="activity_vertical_margin">16dp</dimen>
 	
-	<!--  TextView margins -->
+  <!-- TextView margins -->
   <dimen name="textview_horizontal_margin">8dp</dimen>
   <dimen name="textview_horizontal_margin_large">12dp</dimen>
   <dimen name="textview_vertical_margin">8dp</dimen>
+
+  <!-- MonthView margins -->
+  <dimen name="monthview_vertical_margin">5dp</dimen>
   
-  <!--  Text size -->
+  <!-- Text size -->
   <dimen name="edit_text_size_medium">18sp</dimen>
 </resources>
