Fix the bug of showing preference for Simplified/Traditional Chinese.

--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -27,7 +27,7 @@
         android:entryValues="@array/chinese_values_preference"
         android:dialogTitle="@string/chinese_dialog_title_preference"
         android:persistent="true" 
-        android:defaultValue="0"
+        android:defaultValue="simplified"
         android:shouldDisableView="false" />         
   </PreferenceCategory>
 </PreferenceScreen>
